[lab3] swagger completed, added website
