# docs/swagger.yaml
@@ -3,34 +3,52 @@ definitions:
   ds.Car:
     properties:
       bodyType:
+        example: Седан
         type: string
       color:
+        example: Синий
         type: string
       description:
+        example: Продаю машину!
         type: string
       engineType:
+        example: V8
         type: string
       engineVolume:
+        example: 2
         type: number
       gearbox:
+        example: Механика
         type: string
       image:
+        example: https://res.cloudinary.com/dl0tawm7w/image/upload/v1667667247/CarsImages/chrome_YoXkkSgQS3_zsbaep.png
         type: string
       mileage:
+        example: 27000
         type: integer
       name:
+        example: Subaru WRX I Рестайлинг
         type: string
       power:
+        example: 268
         type: integer
       salePrice:
+        example: 3500000
         type: integer
       typeOfDrive:
-        type: string
-      uuid:
+        example: Полный
         type: string
       wheel:
+        example: Левый руль
         type: string
       year:
+        example: 2017
+        type: integer
+    type: object
+  ds.CarPrice:
+    properties:
+      salePrice:
+        example: 1200000
         type: integer
     type: object
   models.ModelCarCreated:
@@ -96,65 +114,16 @@ paths:
       tags:
       - Info
     post:
+      consumes:
+      - application/json
       description: Adding a new car to database
       parameters:
-      - description: Название машины
-        in: query
-        name: Name
+      - description: Машина
+        in: body
+        name: Car
         required: true
-        type: string
-      - description: Цена машины
-        in: query
-        name: SalePrice
-        required: true
-        type: integer
-      - description: Год производства
-        in: query
-        name: Year
-        required: true
-        type: integer
-      - description: Тип двигателя
-        in: query
-        name: EngineType
-        required: true
-        type: string
-      - description: Объем двигателя
-        in: query
-        name: EngineVolume
-        required: true
-        type: number
-      - description: Кол-во л.с.
-        in: query
-        name: Power
-        required: true
-        type: integer
-      - description: Тип коробки передач
-        in: query
-        name: Gearbox
-        required: true
-        type: string
-      - description: Привод
-        in: query
-        name: TypeOfDrive
-        required: true
-        type: string
-      - description: Цвет
-        in: query
-        name: Color
-        type: string
-      - description: Пробег
-        in: query
-        name: Mileage
-        required: true
-        type: integer
-      - description: Расположение руля
-        in: query
-        name: Wheel
-        type: string
-      - description: Описание
-        in: query
-        name: Description
-        type: string
+        schema:
+          $ref: '#/definitions/ds.Car'
       produces:
       - application/json
       responses:
@@ -173,12 +142,12 @@ paths:
       summary: Add a new car
       tags:
       - Add
-  /cars/:uuid:
+  /cars/{UUID}:
     delete:
       description: Delete a car via its uuid
       parameters:
       - description: UUID машины
-        in: query
+        in: path
         name: UUID
         required: true
         type: string
@@ -208,7 +177,7 @@ paths:
       description: Get a price via uuid of a car
       parameters:
       - description: UUID машины
-        in: query
+        in: path
         name: UUID
         required: true
         type: string
@@ -235,18 +204,21 @@ paths:
       tags:
       - Info
     put:
+      consumes:
+      - application/json
       description: Change a price for a car via its uuid
       parameters:
       - description: UUID машины
-        in: query
+        in: path
         name: UUID
         required: true
         type: string
       - description: Новая цена
-        in: query
-        name: Price
+        in: body
+        name: SalePrice
         required: true
-        type: integer
+        schema:
+          $ref: '#/definitions/ds.CarPrice'
       produces:
       - application/json
       responses:
@@ -270,6 +242,6 @@ paths:
       tags:
       - Change
 schemes:
-- https
 - http
+- https
 swagger: "2.0"
